docs(argo-cd): fix ApplicationSet to PascalCase
Signed-off-by: Marco Lecheler <marco.lecheler@mercedes-benz.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2187,7 +2187,7 @@ applicationSet:
   # @default -- `""` (defaults to global.logging.level)
   logLevel: ""
 
-  # -- Additional containers to be added to the applicationset controller pod
+  # -- Additional containers to be added to the ApplicationSet controller pod
   extraContainers: []
 
   ## Metrics service configuration
