--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,4 +23,5 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Fixed]: Prevent could not parse 0 warning"
+    - "[Docs]: Updated ApplicationSet value documentation"
+    - "[Docs]: Updated notification value documentation"
