--- a/charts/argo-events/templates/argo-events-webhook/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-webhook/deployment.yaml
@@ -50,6 +50,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: PORT
+          value: "{{ .Values.webhook.port }}"
         {{- with .Values.webhook.env }}
           {{- toYaml . | nindent 8 }}
         {{- end }}
@@ -63,7 +65,7 @@ spec:
         {{- end }}
         ports:
         - name: webhook
-          containerPort: 443
+          containerPort: {{ .Values.webhook.port }}
           protocol: TCP
         livenessProbe:
           tcpSocket:
