--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.5.5
 kubeVersion: ">=1.22.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.16.15
+version: 5.17.0
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -23,7 +23,6 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: Option createClusterRoles to enable cluster roles from one place"
-    - "[Deprecated]: Option controller.clusterAdminAccess.enabled"
-    - "[Deprecated]: Option server.clusterAdminAccess.enabled"
-    - "[Deprecated]: Option repoServer.clusterAdminAccess.enabled"
+    - "[Added]: Support for extraContainers and initContainers for applicationSet and notifications"
+    - "[Added]: Support for use of Helm templates for extraContainers and initContainers"
+    - "[Docs]: Added notes about custom Helm template support"
