--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,8 +1,9 @@
 apiVersion: v2
-appVersion: v2.4.15-cap-CR-16709-init-app-proxy
+appVersion: v2.5.5-cap-CR-16950
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.7.0-2-CR-16709-init-app-proxy
+version: 5.16.0-2-cap-CR-16950
+kubeVersion: ">=1.22.0-0"
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -17,11 +18,9 @@ maintainers:
     url: https://argoproj.github.io/
 dependencies:
   - name: redis-ha
-    version: 4.22.2
+    version: 4.22.3
     repository: https://dandydeveloper.github.io/charts/
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: Configuration sections configs.cm and configs.rbac"
-    - "[Deprecated]: Generic configuration via server.config"
-    - "[Deprecated]: Argo RBAC configuration via server.rbacConfig"
+    - "[Added]: Ability to annotate Deployment and Statefulset objects for all components"
