feat(argocd-apps): multiple sources for application and applicationset
Signed-off-by: toyamagu <toyamagu2021@gmail.com>

--- a/charts/argocd-apps/templates/applicationsets.yaml
+++ b/charts/argocd-apps/templates/applicationsets.yaml
@@ -52,8 +52,14 @@ spec:
     {{- with .spec }}
     spec:
       project: {{ tpl .project $ }}
+      {{- with .source }}
       source:
-        {{- toYaml .source | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .sources }}
+      sources:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       destination:
         {{- toYaml .destination | nindent 8 }}
       {{- with .syncPolicy }}
