--- a/charts/argocd-apps/ci/applicationsets-values.yaml
+++ b/charts/argocd-apps/ci/applicationsets-values.yaml
@@ -1,8 +1,7 @@
 # Test with applicationsets
 
 applicationsets:
-- name: guestbook
-  namespace: default # Only for test purpose.
+- name: applicatioset
   additionalLabels: {}
   additionalAnnotations: {}
   # See PR #10026 (ArgoCD v2.5 or later)
