--- a/charts/argocd-apps/templates/applications.yaml
+++ b/charts/argocd-apps/templates/applications.yaml
@@ -23,8 +23,14 @@ metadata:
   {{- end }}
 spec:
   project: {{ tpl .project $ }}
+  {{- with .source }}
   source:
-    {{- toYaml .source | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- with .sources }}
+  sources:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   destination:
     {{- toYaml .destination | nindent 4 }}
   {{- with .syncPolicy }}
