--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -15,6 +15,14 @@ applications: []
 #     path: guestbook
 #     directory:
 #       recurse: true
+#   # ArgoCD v2.6 or later
+#   sources:
+#    - chart: elasticsearch
+#      repoURL: https://helm.elastic.co
+#      targetRevision: 8.5.1
+#    - repoURL: https://github.com/argoproj/argocd-example-apps.git
+#      path: guestbook
+#      targetRevision: HEAD
 #   destination:
 #     server: https://kubernetes.default.svc
 #     namespace: guestbook
