--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -136,7 +136,7 @@ spec:
             - name: ARGOCD_APPLICATIONSET_CONTROLLER_ENABLE_PROGRESSIVE_SYNCS
               valueFrom:
                 configMapKeyRef:
-                  key: applicationsetcontroller.enable.progressive.rollouts
+                  key: applicationsetcontroller.enable.progressive.syncs
                   name: argocd-cmd-params-cm
                   optional: true
           {{- with .Values.applicationSet.extraEnvFrom }}
